src/styles/components/_card-new.scss
.card__container {
  width: 100%;
  min-width: 40%;
  margin-top: 10px;
  height: auto;
  @include get-font(medium, principal);
}

.card__container--img {
  width: 100%;
  height: auto;
}

.card__items--label {
  width: 100%;
  font-size: 1em;
  @include get-font-weight(bold);
  padding: 0.312em 1em 0 0.5em;
  @include breakpoint(medium) {
    padding-right: 0;
  }
}

.card__items--text {
  padding: 0 10px 20px;
  height: auto;
  @include get-font-size(principal);
  @include breakpoint(medium) {
    padding-right: 0;
  }
}

